# 190-Final-Project

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: solution_python.launch
scripts/: .gitignore  astar.py  astar_test.py  configuration.json  image_util.py  mdp.py  policy_list.json  robot.py
scripts/configs/big_map/: approx_q_uncertain.avi  config_approx_q_uncertain.json  config_q_uncertain.json  q_uncertain.avi  value_it.avi
scripts/configs/small_map/: approx_certain.avi  approx_q_uncertain.avi  config_approx_certain.json  config_approx_uncertain.json  config_q_certain.json  config_q_uncertain.json  config_value_uncertain.json  q_certain.avi  q_uncertain.avi  value_it.avi
